--- a/src/main/frontend/src/styles/LandingPage.css
+++ b/src/main/frontend/src/styles/LandingPage.css
@@ -1,3 +1,5 @@
+
+
 .landing-page {
     display: flex;
     justify-content: center;
@@ -50,4 +52,52 @@
     cursor: pointer;
     width: auto;
     height: 2.5rem;
+}
+.menu-icon {
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 100;
+}
+
+.menu-overlay {
+    width: 1007px;
+    height: 930px;
+    flex-shrink: 0;
+    opacity: 0.6;
+    background: #191919;
+
+    /*opacity: 0.6;6*/
+    /**/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*z-index: 99;*/
+}
+
+.menu {
+    display: flex;
+    width: 505px;
+    height: 930px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 48px;
+    flex-shrink: 0;
+    background-color: white;
+    max-width: 400px;
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+    /*border-radius: 8px;*/
+    text-align: center;
+}
+
+.menu h1{
+    font-family: Inter, Roboto, serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
 }
